# QuantSentinel

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
locales/: quantsentinel.pot
locales/en/LC_MESSAGES/: quantsentinel.po
locales/zh_CN/LC_MESSAGES/: quantsentinel.po
scripts/: acceptance_oneclick.sh  check_domain_services_coverage.py  check_missing_translations.py  check_streamlit_i18n.py
src/quantsentinel/: __init__.py
src/quantsentinel/app/: main.py
src/quantsentinel/app/pages/: __init__.py  admin.py  explore.py  help.py  market.py  monitor.py  research_lab.py  strategy_lab.py
src/quantsentinel/app/ui/: __init__.py  command_palette.py  components.py  drawer.py  layout.py  notifications.py  shortcuts.py  state.py  tables.py  toasts.py
src/quantsentinel/common/: __init__.py  config.py  errors.py  ids.py  logging.py  security.py  time.py  typing.py
src/quantsentinel/domain/: __init__.py
src/quantsentinel/domain/alerts/: __init__.py  evaluator.py  expression.py  governance.py  models.py  rules.py
src/quantsentinel/domain/market/: __init__.py  indicators.py  models.py  qc.py
src/quantsentinel/domain/research/: __init__.py  backtest_engine.py  metrics.py  models.py  risk.py  walk_forward.py
src/quantsentinel/domain/strategies/: plugin.py  search.py
src/quantsentinel/domain/strategies/families/: __init__.py  carry_proxy.py  donchian_breakout.py  ma_crossover.py  pairs_spread_mr.py  rsi_mean_revert.py  seasonal_bias.py  vol_breakout.py  zscore_mean_revert.py
src/quantsentinel/i18n/: __init__.py  catalog.py  gettext.py
src/quantsentinel/infra/artifacts/: __init__.py  snapshot_export.py
src/quantsentinel/infra/db/: engine.py  models.py
src/quantsentinel/infra/db/migrations/: env.py
src/quantsentinel/infra/db/migrations/versions/: 0001_init_schema.py  0002_add_notifications.py  0003_add_task_log.py
src/quantsentinel/infra/db/repos/: alerts_repo.py  audit_repo.py  derived_repo.py  events_repo.py  instruments_repo.py  layouts_repo.py  notifications_repo.py  prices_repo.py  projects_repo.py  runs_repo.py  tasks_repo.py  users_repo.py
src/quantsentinel/infra/providers/: __init__.py  base.py  csv_import.py  yahoo.py
src/quantsentinel/infra/tasks/: __init__.py  beat_schedule.py  celery_app.py  lifecycle.py  tasks_ingest.py  tasks_monitor.py  tasks_research.py  tasks_snapshot.py
src/quantsentinel/services/: alerts_service.py  audit_service.py  auth_service.py  context_service.py  explore_service.py  lab_contracts.py  layout_service.py  market_service.py  notification_service.py  rbac_service.py  research_service.py  strategy_service.py  task_service.py
tests/integration/: test_rbac_gating.py
tests/integration/app_smoke/: test_default_admin_bootstrap.py  test_explore_page_data_flow.py  test_header.py  test_monitor_wizard_integration.py  test_palette_shortcuts_audit_integration.py  test_shortcuts.py
tests/integration/db/: test_migrations_contract.py
tests/integration/i18n/: test_language_switch_snapshots.py
tests/integration/layout/: test_layout_service_integration.py
tests/integration/tasks/: test_alerts_governance_integration.py  test_param_search_pipeline.py  test_snapshot_export_artifacts.py  test_task_enqueue_integration.py  test_task_lifecycle_integration.py
tests/unit/app/: test_command_palette.py  test_workspace_structure.py
tests/unit/domain/: test_alert_expression.py  test_alert_expression_security.py  test_alert_governance.py  test_indicators_and_rules.py  test_research_metrics_walk_forward.py
tests/unit/domain/alerts/: test_expression_ast_whitelist.py
tests/unit/domain/strategies/: test_family_plugins.py
tests/unit/services/: test_alerts_service.py  test_alerts_service_rules_and_governance.py  test_audit_service.py  test_explore_service.py  test_market_service.py  test_param_search.py  test_research_service.py  test_research_service_contract.py  test_strategy_family_matrix.py  test_strategy_service.py  test_strategy_service_contract.py
