[tool.poetry]
name = "quantsentinel"
version = "0.1.0"
description = "QuantSentinel - Team Edition trading research terminal"
authors = ["Alex <you@example.com>"]
readme = "README.md"
packages = [{ include = "quantsentinel", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

# UI
streamlit = "^1.41.0"
plotly = "^5.24.1"

# Core data
pandas = "^2.2.3"
numpy = "^2.1.3"

# Validation / models
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"

# DB
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg = { version = "^3.2.3", extras = ["binary"] }

# Background tasks / cache
celery = "^5.4.0"
redis = "^5.2.0"

# Security
argon2-cffi = "^23.1.0"

# i18n
babel = "^2.16.0"

# Optional (nice-to-have)
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.7.3"
mypy = "^1.13.0"
types-redis = "^4.6.0.20241004"
pre-commit = "^4.0.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.coverage.run]
source = ["quantsentinel"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"