[tool.poetry]
name = "quantsentinel"
version = "0.1.0"
description = "QuantSentinel - Team Edition trading research terminal"
authors = ["Alex <you@example.com>"]
readme = "README.md"
packages = [{ include = "quantsentinel", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

# UI
streamlit = "^1.41.0"
plotly = "^5.24.1"

# Core data
pandas = "^2.2.3"
numpy = "^2.1.3"

# Validation / models
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"

# DB
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg = { version = "^3.2.3", extras = ["binary"] }

# Background tasks / cache
celery = "^5.4.0"
redis = "^5.2.0"

# Security
argon2-cffi = "^23.1.0"

# i18n
babel = "^2.16.0"

# Optional (nice-to-have)
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.7.3"
mypy = "^1.13.0"
types-redis = "^4.6.0.20241004"
pre-commit = "^4.0.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"
# Useful defaults for deterministic tests
filterwarnings = [
  "error::DeprecationWarning:quantsentinel.*",
  "ignore::DeprecationWarning:.*",
]

[tool.coverage.run]
branch = true
parallel = true
source = [
  "quantsentinel.domain.market.indicators",
  "quantsentinel.domain.alerts.rules",
  "quantsentinel.domain.alerts.expression",
  "quantsentinel.domain.research.walk_forward",
  "quantsentinel.domain.research.metrics",
  "quantsentinel.services.strategy_service",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
omit = [
  "src/quantsentinel/domain/alerts/evaluator.py",
  "src/quantsentinel/domain/market/models.py",
  "src/quantsentinel/domain/market/qc.py",
  "src/quantsentinel/domain/research/backtest_engine.py",
  "src/quantsentinel/domain/research/models.py",
  "src/quantsentinel/domain/research/risk.py",
  "src/quantsentinel/domain/strategies/search.py",
  "src/quantsentinel/services/alerts_service.py",
  "src/quantsentinel/services/auth_service.py",
  "src/quantsentinel/services/context_service.py",
  "src/quantsentinel/services/layout_service.py",
  "src/quantsentinel/services/market_service.py",
  "src/quantsentinel/services/notification_service.py",
  "src/quantsentinel/services/task_service.py",
]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]
extend-exclude = [
  ".venv",
  "src/quantsentinel/infra/db/migrations/versions",
]

[tool.ruff.lint]
# Keep a strong, still-manageable rule set
select = [
  "E", "F", "I",        # basic
  "B",                  # bugbear
  "UP",                 # pyupgrade
  "SIM",                # simplifications
  "RUF",                # ruff-specific
  "C4",                 # comprehensions
  "ARG",                # unused arguments
]
ignore = [
  "E501",  # handled by formatter
  "ARG001", # allow celery bind/self placeholders
  "ARG002", # allow unused args in callbacks/overrides
  "ARG004", # allow staticmethod signature compatibility
]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG005", "B011", "RUF012", "UP017"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
